@startuml

title __LOGS's Class Diagram__\n

  namespace com.example.csufttally {
    namespace logs {
      class com.example.csufttally.logs.LoginActivity {
          {static} + REQUEST_CODE_REGISTER : int
          {static} - TAG : String
          - btnLogin : Button
          - cbAutoLogin : CheckBox
          - cbRemember : CheckBox
          - etAccount : EditText
          - etPassword : EditText
          - pass : String
          - userName : String
          + toRegister()
          # onActivityResult()
          # onCreate()
          - initData()
          - initView()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace logs {
      class com.example.csufttally.logs.RegisterActivity {
          {static} + RESULT_CODE_REGISTER : int
          - btnRegister : Button
          - cbAgree : CheckBox
          - etAccount : EditText
          - etPass : EditText
          - etPassConfirm : EditText
          + onClick()
          # onCreate()
      }
    }
  }
  

  com.example.csufttally.logs.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.csufttally.logs.RegisterActivity .up.|> android.view.View.OnClickListener
  com.example.csufttally.logs.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
